--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
   <link rel="stylesheet" type="text/css" href="css/master_a-stramien.css?crc=88385032"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=179939547" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=75543570" id="pagesheet"/>
   <!-- JS includes -->
   <!--[if lt IE 9]>
   <script src="scripts/html5shiv.js?crc=4241844378" type="text/javascript"></script>
@@ -237,16 +237,16 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <div class="grpelem" id="u4096" data-mu-ie-matrix="progid:DXImageTransform.Microsoft.Matrix(M11=0,M12=-1,M21=1,M22=0,SizingMethod='auto expand')" data-mu-ie-matrix-dx="20" data-mu-ie-matrix-dy="-20"><!-- simple frame --></div>
      <a class="nonblock nontext transition clip_frame clearfix grpelem" id="u2585" href="grafische-cases.html#dtc-media"><!-- image --><img class="position_content" id="u2585_img" src="images/dtc222x157.jpg?crc=3947811852" alt="" width="222" height="156"/></a>
      <a class="nonblock nontext transition clip_frame clearfix grpelem" id="u2717" href="grafische-cases.html#webbio"><!-- image --><img class="position_content" id="u2717_img" src="images/webbio222x157.jpg?crc=45609640" alt="" width="222" height="156"/></a>
-     <a class="nonblock nontext mse_pre_init" id="u2621" href="grafische-cases.html#dtc-media"><!-- state-based BG images --><img id="u2621_states" alt="Afstudeeropdracht: herbedenken OTM Bijdrage: vormgeving en animatie (micro-interacties) In opdracht van: DTC Media" src="images/blank.gif?crc=4208392903"/></a>
-     <a class="nonblock nontext mse_pre_init" id="u4016" href="grafische-cases.html#nieuwbouwkenners"><!-- state-based BG images --><img id="u4016_states" alt="Nieuwbouwkenners logo Bijdrage: concept en vormgeving logo In opdracht van: Nieuwbouwkenners.nl (Hans Janssen)" src="images/blank.gif?crc=4208392903"/></a>
-     <a class="nonblock nontext mse_pre_init" id="u4025" href="grafische-cases.html#minimal"><!-- state-based BG images --><img id="u4025_states" alt="MINIMAL Bijdrage: Art Direction In opdracht van: HAN" src="images/blank.gif?crc=4208392903"/></a>
-     <a class="nonblock nontext mse_pre_init" id="u3968" href="grafische-cases.html#webbio"><!-- state-based BG images --><img id="u3968_states" alt="Webbio motion graphic Kwik Bijdrage: vormgeving en animatie In opdracht van: Webbio" src="images/blank.gif?crc=4208392903"/></a>
-     <a class="nonblock nontext mse_pre_init" id="u9786" href="grafische-cases.html#logopedie-boxmeer"><!-- state-based BG images --><img id="u9786_states" alt="(Pre)Logopedie Boxmeer Bijdrage: concept en vormgeving In opdracht van: (Pre)Logopedie Boxmeer" src="images/blank.gif?crc=4208392903"/></a>
-     <a class="nonblock nontext mse_pre_init" id="u4013" href="grafische-cases.html#vivare"><!-- state-based BG images --><img id="u4013_states" alt="Vivare Bijdrage: vormgeving In opdracht van: Vivare" src="images/blank.gif?crc=4208392903"/></a>
-     <a class="nonblock nontext mse_pre_init" id="u3974" href="grafische-cases.html#recepten-vormgegeven"><!-- state-based BG images --><img id="u3974_states" alt="Recepten vormgegeven Bijdrage: vormgeving In opdracht van: RijnIJssel" src="images/blank.gif?crc=4208392903"/></a>
-     <a class="nonblock nontext mse_pre_init" id="u4010" href="grafische-cases.html#ecoorn"><!-- state-based BG images --><img id="u4010_states" alt="Ecoorn Bijdrage: vormgeving en code In opdracht van: HAN" src="images/blank.gif?crc=4208392903"/></a>
-     <a class="nonblock nontext mse_pre_init" id="u3992" href="grafische-cases.html#a-world-without-aids"><!-- state-based BG images --><img id="u3992_states" alt="A World Without AIDS Bijdrage: Art Direction In opdracht van: HAN" src="images/blank.gif?crc=4208392903"/></a>
-     <a class="nonblock nontext mse_pre_init" id="u4007" href="grafische-cases.html#crazy-for-the-storm"><!-- state-based BG images --><img id="u4007_states" alt="Crazy for the Storm Bijdrage: Art Direction In opdracht van: HAN" src="images/blank.gif?crc=4208392903"/></a>
+     <a class="nonblock nontext grpelem" id="u2621" href="grafische-cases.html#dtc-media"><!-- state-based BG images --><img id="u2621_states" alt="Afstudeeropdracht: herbedenken OTM Bijdrage: vormgeving en animatie (micro-interacties) In opdracht van: DTC Media" src="images/blank.gif?crc=4208392903"/></a>
+     <a class="nonblock nontext grpelem" id="u4016" href="grafische-cases.html#nieuwbouwkenners"><!-- state-based BG images --><img id="u4016_states" alt="Nieuwbouwkenners logo Bijdrage: ontwerp logo In opdracht van: Nieuwbouwkenners.nl (Hans Janssen)" src="images/blank.gif?crc=4208392903"/></a>
+     <a class="nonblock nontext grpelem" id="u4025" href="grafische-cases.html#minimal"><!-- state-based BG images --><img id="u4025_states" alt="MINIMAL Bijdrage: Art Direction In opdracht van: HAN" src="images/blank.gif?crc=4208392903"/></a>
+     <a class="nonblock nontext grpelem" id="u3968" href="grafische-cases.html#webbio"><!-- state-based BG images --><img id="u3968_states" alt="Webbio motion graphic Kwik Bijdrage: vormgeving en animatie In opdracht van: Webbio" src="images/blank.gif?crc=4208392903"/></a>
+     <a class="nonblock nontext grpelem" id="u9786" href="grafische-cases.html#logopedie-boxmeer"><!-- state-based BG images --><img id="u9786_states" alt="(Pre)Logopedie Boxmeer Bijdrage: concept en vormgeving In opdracht van: (Pre)Logopedie Boxmeer" src="images/blank.gif?crc=4208392903"/></a>
+     <a class="nonblock nontext grpelem" id="u4013" href="grafische-cases.html#vivare"><!-- state-based BG images --><img id="u4013_states" alt="Vivare Bijdrage: vormgeving In opdracht van: Vivare" src="images/blank.gif?crc=4208392903"/></a>
+     <a class="nonblock nontext grpelem" id="u3974" href="grafische-cases.html#recepten-vormgegeven"><!-- state-based BG images --><img id="u3974_states" alt="Recepten vormgegeven Bijdrage: vormgeving In opdracht van: RijnIJssel" src="images/blank.gif?crc=4208392903"/></a>
+     <a class="nonblock nontext grpelem" id="u4010" href="grafische-cases.html#ecoorn"><!-- state-based BG images --><img id="u4010_states" alt="Ecoorn Bijdrage: vormgeving en code In opdracht van: HAN" src="images/blank.gif?crc=4208392903"/></a>
+     <a class="nonblock nontext grpelem" id="u3992" href="grafische-cases.html#a-world-without-aids"><!-- state-based BG images --><img id="u3992_states" alt="A World Without AIDS Bijdrage: Art Direction In opdracht van: HAN" src="images/blank.gif?crc=4208392903"/></a>
+     <a class="nonblock nontext grpelem" id="u4007" href="grafische-cases.html#crazy-for-the-storm"><!-- state-based BG images --><img id="u4007_states" alt="Crazy for the Storm Bijdrage: Art Direction In opdracht van: HAN" src="images/blank.gif?crc=4208392903"/></a>
      <a class="nonblock nontext transition clip_frame clearfix grpelem" id="u2557" href="grafische-cases.html#recepten-vormgegeven"><!-- image --><img class="position_content" id="u2557_img" src="images/recepten-vormgegeven222x157.jpg?crc=338764685" alt="" width="222" height="156"/></a>
      <a class="nonblock nontext transition clip_frame clearfix grpelem" id="u2550" href="grafische-cases.html#a-world-without-aids"><!-- image --><img class="position_content" id="u2550_img" src="images/awwa222x157.jpg?crc=400202918" alt="" width="222" height="156"/></a>
      <div class="grpelem" id="u4111" data-mu-ie-matrix="progid:DXImageTransform.Microsoft.Matrix(M11=0.7071,M12=-0.7071,M21=0.7071,M22=0.7071,SizingMethod='auto expand')" data-mu-ie-matrix-dx="-17" data-mu-ie-matrix-dy="-17"><!-- simple frame --></div>
@@ -495,7 +495,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   </div>
   <div class="preload_images">
    <img class="preload" src="images/u2621_states-r.png?crc=492119342" alt=""/>
-   <img class="preload" src="images/u4016_states-r.png?crc=3965349185" alt=""/>
+   <img class="preload" src="images/u4016_states-r.png?crc=84282766" alt=""/>
    <img class="preload" src="images/u4025_states-r.png?crc=247404486" alt=""/>
    <img class="preload" src="images/u3968_states-r.png?crc=4145919619" alt=""/>
    <img class="preload" src="images/u9786_states-r.png?crc=4129143480" alt=""/>
@@ -564,16 +564,6 @@ $('#u2901').registerOpacityScrollEffect([{"in":[-Infinity,50],"fade":20,"opacity
 $('#u2903').registerOpacityScrollEffect([{"in":[-Infinity,50],"fade":20,"opacity":0},{"opacity":100,"in":[50,50]},{"in":[50,Infinity],"fade":50,"opacity":100}]);/* scroll effect */
 $('#u2905-4').registerOpacityScrollEffect([{"in":[-Infinity,50],"fade":20,"opacity":0},{"opacity":100,"in":[50,50]},{"in":[50,Infinity],"fade":50,"opacity":100}]);/* scroll effect */
 $('#u2959').registerOpacityScrollEffect([{"in":[-Infinity,53],"fade":0,"opacity":70},{"opacity":70,"in":[53,53]},{"in":[53,Infinity],"fade":50,"opacity":0}]);/* scroll effect */
-$('#u2621').registerPositionScrollEffect([{"speed":[0,1],"in":[-Infinity,1440.3]},{"speed":[0,1],"in":[1440.3,Infinity]}]);/* scroll effect */
-$('#u4016').registerPositionScrollEffect([{"speed":[0,1],"in":[-Infinity,1440.3]},{"speed":[0,1],"in":[1440.3,Infinity]}]);/* scroll effect */
-$('#u4025').registerPositionScrollEffect([{"speed":[0,1],"in":[-Infinity,1689.75]},{"speed":[0,1],"in":[1689.75,Infinity]}]);/* scroll effect */
-$('#u3968').registerPositionScrollEffect([{"speed":[0,1],"in":[-Infinity,1440.3]},{"speed":[0,1],"in":[1440.3,Infinity]}]);/* scroll effect */
-$('#u9786').registerPositionScrollEffect([{"speed":[0,1],"in":[-Infinity,1440.3]},{"speed":[0,1],"in":[1440.3,Infinity]}]);/* scroll effect */
-$('#u4013').registerPositionScrollEffect([{"speed":[0,1],"in":[-Infinity,1440.3]},{"speed":[0,1],"in":[1440.3,Infinity]}]);/* scroll effect */
-$('#u3974').registerPositionScrollEffect([{"speed":[0,1],"in":[-Infinity,1939.65]},{"speed":[0,1],"in":[1939.65,Infinity]}]);/* scroll effect */
-$('#u4010').registerPositionScrollEffect([{"speed":[0,1],"in":[-Infinity,1440.3]},{"speed":[0,1],"in":[1440.3,Infinity]}]);/* scroll effect */
-$('#u3992').registerPositionScrollEffect([{"speed":[0,1],"in":[-Infinity,1440.3]},{"speed":[0,1],"in":[1440.3,Infinity]}]);/* scroll effect */
-$('#u4007').registerPositionScrollEffect([{"speed":[0,1],"in":[-Infinity,1440.3]},{"speed":[0,1],"in":[1440.3,Infinity]}]);/* scroll effect */
 $('#u4177-6').registerOpacityScrollEffect([{"in":[-Infinity,686.65],"fade":20,"opacity":0},{"opacity":100,"in":[686.65,686.65]},{"in":[686.65,Infinity],"fade":50,"opacity":100}]);/* scroll effect */
 $('#u4186').registerBackgroundPositionScrollEffect([{"speed":[0,1.06],"in":[-Infinity,1053.3]},{"speed":[0,1.06],"in":[1053.3,Infinity]}]);/* scroll effect */
 Muse.Utils.showWidgetsWhenReady();/* body */
