--- a/grafische-cases.html
+++ b/grafische-cases.html
@@ -10,14 +10,14 @@
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.musemenu.js", "jquery.watch.js", "jquery.scrolleffects.js", "require.js", "grafische-cases.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.musemenu.js", "jquery.watch.js", "jquery.musepolyfill.bgsize.js", "jquery.scrolleffects.js", "require.js", "grafische-cases.css"], "outOfDate":[]};
 </script>
   
   <title>Grafische cases</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
   <link rel="stylesheet" type="text/css" href="css/master_a-stramien.css?crc=88385032"/>
-  <link rel="stylesheet" type="text/css" href="css/grafische-cases.css?crc=243398259" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/grafische-cases.css?crc=189723160" id="pagesheet"/>
   <!-- JS includes -->
   <!--[if lt IE 9]>
   <script src="scripts/html5shiv.js?crc=4241844378" type="text/javascript"></script>
@@ -81,41 +81,32 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <p>2016</p>
      </div>
     </div>
-    <div class="clearfix colelem" id="pu3851"><!-- group -->
+    <div class="clearfix colelem" id="pu3839"><!-- group -->
+     <div class="grpelem" id="u3839"><!-- simple frame --></div>
+     <div class="grpelem" id="u3863"><!-- simple frame --></div>
      <div class="grpelem" id="u3851"><!-- simple frame --></div>
      <div class="grpelem" id="u3607"><!-- simple frame --></div>
+     <div class="clip_frame grpelem" id="u3581"><!-- image -->
+      <img class="block" id="u3581_img" src="images/awwa-film.jpg?crc=4229805549" alt="" width="719" height="112"/>
+     </div>
      <img class="grpelem" id="u3494-4" alt="Vivare" width="721" height="48" src="images/u3494-4.png?crc=138536843"/><!-- rasterized frame -->
      <img class="grpelem" id="u3523-4" alt="Recepten Vormgegeven" width="844" height="50" src="images/u3523-4.png?crc=280174492"/><!-- rasterized frame -->
+     <img class="grpelem" id="u3681-4" alt="Ecoorn" width="844" height="48" src="images/u3681-4.png?crc=4102397887"/><!-- rasterized frame -->
+     <img class="grpelem" id="u3565-4" alt="A World Without AIDS" width="845" height="48" src="images/u3565-4.png?crc=4238530171"/><!-- rasterized frame -->
      <img class="grpelem" id="u3491-4" alt="In opdracht van Vivare (een woningcorporatie in Arnhem) heb ik de vormgeving van een nieuw bouwhekzeil gerealiserd. Vivare wilde een nieuw bouwhekzeil waarbij in positieve zin werd gecommuniceerd vanuit de identiteit van deze woningcorporatie." width="429" height="68" src="images/u3491-4.png?crc=3985357376"/><!-- rasterized frame -->
      <img class="grpelem" id="u3526-5" alt="Op de opleiding zouden alle leerlingen die de vormgeving kant op wilden een recept zelf maken en fotograferen en vervolgens vormgeven. Aan de hand van alle ingekomen recepten met foto’s is daar een boek uit ontstaan. " width="429" height="85" src="images/u3526-5.png?crc=240469881"/><!-- rasterized frame -->
+     <img class="grpelem" id="u3678-4" alt="Het primaire aandachtspunt bij deze opdracht was om een ecologische levensstijl aantrekkelijk te maken voor vrouwen. Hierdoor heeft het logo een persoonlijk en speels karakter gekregen dat verwachte levensstijl van de potentiële klant weerspiegelt: de eekhoorn." width="429" height="85" src="images/u3678-4.png?crc=238314706"/><!-- rasterized frame -->
+     <img class="grpelem" id="u3575-4" alt="Het concept “A World Without AIDS” zou meegaan vanuit de gedachtegang van jongeren: feesten. Vanuit deze insteek proberen wij ze ook bewust te maken en te laten doneren ten behoeve van het aidsprobleem." width="429" height="68" src="images/u3575-4.png?crc=3782265540"/><!-- rasterized frame -->
      <img class="grpelem" id="u3488-8" alt="Bouwhekzijl Bijdrage: vormgeving In opdracht van: Vivare" width="396" height="296" src="images/u3488-8.png?crc=531715622"/><!-- rasterized frame -->
      <img class="grpelem" id="u3529-8" alt="Kookboek Bijdrage: vormgeving In opdracht van: RijnIJssel" width="396" height="77" src="images/u3529-8.png?crc=4243157788"/><!-- rasterized frame -->
+     <img class="grpelem" id="u3675-8" alt="Website Bijdrage: ontwerp en code In opdracht van: HAN" width="396" height="77" src="images/u3675-8.png?crc=3807272045"/><!-- rasterized frame -->
+     <img class="grpelem" id="u3578-8" alt="Live-uitzending Bijdrage: Art Direction In opdracht van: HAN" width="396" height="77" src="images/u3578-8.png?crc=4190455504"/><!-- rasterized frame -->
      <div class="clip_frame grpelem" id="u3497"><!-- image -->
       <img class="block" id="u3497_img" src="images/vivare-bouwhekzijl.png?crc=389385901" alt="" width="455" height="216"/>
      </div>
      <div class="clip_frame grpelem" id="u3539"><!-- image -->
       <img class="block" id="u3539_img" src="images/recepten-vormgegeven.png?crc=436199503" alt="" width="514" height="374"/>
      </div>
-     <a class="anchor_item grpelem" id="vivare"></a>
-     <a class="anchor_item grpelem" id="recepten-vormgegeven"></a>
-    </div>
-    <div class="clearfix colelem" id="pu3565-4"><!-- group -->
-     <img class="grpelem" id="u3565-4" alt="A World Without AIDS" width="845" height="48" src="images/u3565-4.png?crc=4238530171"/><!-- rasterized frame -->
-     <a class="anchor_item grpelem" id="a-world-without-aids"></a>
-    </div>
-    <img class="colelem" id="u3575-4" alt="Het concept “A World Without AIDS” zou meegaan vanuit de gedachtegang van jongeren: feesten. Vanuit deze insteek proberen wij ze ook bewust te maken en te laten doneren ten behoeve van het aidsprobleem." width="429" height="68" src="images/u3575-4.png?crc=3782265540"/><!-- rasterized frame -->
-    <div class="clearfix colelem" id="pu3839"><!-- group -->
-     <div class="grpelem" id="u3839"><!-- simple frame --></div>
-     <img class="grpelem" id="u3578-8" alt="Live-uitzending Bijdrage: Art Direction In opdracht van: HAN" width="396" height="77" src="images/u3578-8.png?crc=4190455504"/><!-- rasterized frame -->
-    </div>
-    <div class="clip_frame colelem" id="u3581"><!-- image -->
-     <img class="block" id="u3581_img" src="images/awwa-film.jpg?crc=4229805549" alt="" width="719" height="112"/>
-    </div>
-    <div class="clearfix colelem" id="pu3863"><!-- group -->
-     <div class="grpelem" id="u3863"><!-- simple frame --></div>
-     <img class="grpelem" id="u3681-4" alt="Ecoorn" width="844" height="48" src="images/u3681-4.png?crc=4102397887"/><!-- rasterized frame -->
-     <img class="grpelem" id="u3678-4" alt="Het primaire aandachtspunt bij deze opdracht was om een ecologische levensstijl aantrekkelijk te maken voor vrouwen. Hierdoor heeft het logo een persoonlijk en speels karakter gekregen dat verwachte levensstijl van de potentiële klant weerspiegelt: de eekhoorn." width="429" height="85" src="images/u3678-4.png?crc=238314706"/><!-- rasterized frame -->
-     <img class="grpelem" id="u3675-8" alt="Website Bijdrage: ontwerp en code In opdracht van: HAN" width="396" height="77" src="images/u3675-8.png?crc=3807272045"/><!-- rasterized frame -->
      <div class="clearfix grpelem" id="u3824"><!-- group -->
       <div class="clip_frame clearfix grpelem" id="u3814"><!-- image -->
        <img class="position_content" id="u3814_img" src="images/schermafbeelding%202015-05-07%20om%20175551.jpg?crc=223108365" alt="" width="436" height="243"/>
@@ -126,7 +117,11 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
        </div>
       </div>
      </div>
+     <a class="anchor_item grpelem" id="vivare"></a>
+     <a class="anchor_item grpelem" id="recepten-vormgegeven"></a>
+     <a class="anchor_item grpelem" id="a-world-without-aids"></a>
      <a class="anchor_item grpelem" id="ecoorn"></a>
+     <div class="museBGSize grpelem" id="u10853"><!-- content --></div>
     </div>
     <div class="clearfix colelem" id="pu3869"><!-- group -->
      <div class="grpelem" id="u3869"><!-- simple frame --></div>
@@ -157,13 +152,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <a class="anchor_item grpelem" id="nieuwbouwkenners"></a>
     </div>
    </div>
-   <div class="clearfix grpelem" id="pu3589"><!-- group -->
-    <div class="clip_frame mse_pre_init" id="u3589"><!-- image -->
-     <img class="block" id="u3589_img" src="images/awwa-poster.png?crc=4252866798" alt="" width="336" height="479"/>
-    </div>
-    <div class="clip_frame mse_pre_init" id="u4034"><!-- image -->
-     <img class="block" id="u4034_img" src="images/nieuwbouwkenners-logo.jpg?crc=282984670" alt="" width="303" height="146"/>
-    </div>
+   <div class="clearfix grpelem" id="pu4034"><!-- group -->
+    <div class="museBGSize mse_pre_init" id="u4034"><!-- content --></div>
     <nav class="MenuBar clearfix mse_pre_init" id="menuu9551"><!-- horizontal box -->
      <div class="MenuItemContainer clearfix grpelem" id="u9552"><!-- vertical box -->
       <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox clearfix colelem" id="u9555" href="index.html#grafische-passie"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u9557-4"><!-- content --><p>Grafische passie</p></div></a>
@@ -204,7 +194,7 @@ var suppressMissingFileError = false
 l[1]:null,l=l&&l[2]?l[2]:null;switch(l.toLowerCase()){case "css":k=k.replace(/\W/gi,"_").replace(/^([^a-z])/gi,"_$1");f.className+=" "+k;k=a(c(f,"color"));l=a(c(f,"backgroundColor"));k!=0||l!=0?(Muse.assets.required.splice(h,1),"undefined"!=typeof b[i]&&(k!=b[i]>>>24||l!=(b[i]&16777215))&&Muse.assets.outOfDate.push(i)):h++;f.className="version";break;case "js":h++;break;default:throw Error("Unsupported file type: "+l);}}d?d().jquery!="1.8.3"&&Muse.assets.outOfDate.push("jquery-1.8.3.min.js"):Muse.assets.required.push("jquery-1.8.3.min.js");
 f.parentNode.removeChild(f);if(Muse.assets.outOfDate.length||Muse.assets.required.length)f="Sommige bestanden op de server ontbreken of zijn beschadigd. Wis de cache van de browser en probeer het opnieuw. Als het probleem zich blijft voordoen, kunt u het beste contact opnemen met de auteur van de website.",g&&Muse.assets.outOfDate.length&&(f+="\nOut of date: "+Muse.assets.outOfDate.join(",")),g&&Muse.assets.required.length&&(f+="\nMissing: "+Muse.assets.required.join(",")),suppressMissingFileError?(f+="\nUse SuppressMissingFileError key in AppPrefs.xml to show missing file error pop up.",console.log(f)):alert(f)};location&&location.search&&location.search.match&&location.search.match(/muse_debug/gi)?
 setTimeout(function(){g(!0)},5E3):g()}};
-var muse_init=function(){require.config({baseUrl:""});require(["jquery","museutils","whatinput","jquery.musemenu","jquery.watch","jquery.scrolleffects"],function(d){var $ = d;$(document).ready(function(){try{
+var muse_init=function(){require.config({baseUrl:""});require(["jquery","museutils","whatinput","jquery.musepolyfill.bgsize","jquery.musemenu","jquery.watch","jquery.scrolleffects"],function(d){var $ = d;$(document).ready(function(){try{
 window.Muse.assets.check($);/* body */
 Muse.Utils.transformMarkupToFixBrowserProblemsPreInit();/* body */
 Muse.Utils.prepHyperlinks(true);/* body */
@@ -214,8 +204,9 @@ Muse.Utils.fullPage('#page');/* 100% height page */
 $('#u3857').registerPositionScrollEffect([{"speed":[0,1.05],"in":[-Infinity,2336.25]},{"speed":[0,1.07],"in":[2336.25,Infinity]}]);/* scroll effect */
 $('#u3643-8').registerPositionScrollEffect([{"speed":[0,1.05],"in":[-Infinity,2336.25]},{"speed":[0,1.07],"in":[2336.25,Infinity]}]);/* scroll effect */
 $('#u3326').registerBackgroundPositionScrollEffect([{"speed":[0,1.1],"in":[-Infinity,38.4]},{"speed":[0,1.1],"in":[38.4,Infinity]}]);/* scroll effect */
-$('#u3589').registerPositionScrollEffect([{"speed":[0,1.05],"in":[-Infinity,1965.33]},{"speed":[0,1.07],"in":[1965.33,Infinity]}]);/* scroll effect */
-$('#u4034').registerPositionScrollEffect([{"speed":[0,1.06],"in":[-Infinity,3513.15]},{"speed":[0,1.06],"in":[3513.15,Infinity]}]);/* scroll effect */
+$('#u10853').registerBackgroundPositionScrollEffect([{"speed":[0,1.1],"in":[-Infinity,1886.3]},{"speed":[0,1.1],"in":[1886.3,Infinity]}]);/* scroll effect */
+$('#u4034').registerPositionScrollEffect([{"speed":[0,1.06],"in":[-Infinity,3446.15]},{"speed":[0,1.06],"in":[3446.15,Infinity]}]);/* scroll effect */
+$('#u4034').registerBackgroundPositionScrollEffect([{"speed":[0,1.1],"in":[-Infinity,3446.15]},{"speed":[0,1.1],"in":[3446.15,Infinity]}]);/* scroll effect */
 $('#menuu9551').registerPositionScrollEffect([{"speed":[0,-1],"in":[-Infinity,169]},{"speed":[0,0],"in":[169,Infinity]}]);/* scroll effect */
 Muse.Utils.showWidgetsWhenReady();/* body */
 Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
