--- a/grafische-cases.html
+++ b/grafische-cases.html
@@ -17,7 +17,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
   <link rel="stylesheet" type="text/css" href="css/master_a-stramien.css?crc=88385032"/>
-  <link rel="stylesheet" type="text/css" href="css/grafische-cases.css?crc=189723160" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/grafische-cases.css?crc=4217227906" id="pagesheet"/>
   <!-- JS includes -->
   <!--[if lt IE 9]>
   <script src="scripts/html5shiv.js?crc=4241844378" type="text/javascript"></script>
@@ -172,6 +172,10 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox clearfix colelem" id="u9567" href="index.html#contact"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u9570-4"><!-- content --><p>Contact</p></div></a>
      </div>
     </nav>
+    <div class="mse_pre_init" id="u10882" data-mu-ie-matrix="progid:DXImageTransform.Microsoft.Matrix(M11=0.7071,M12=-0.7071,M21=0.7071,M22=0.7071,SizingMethod='auto expand')" data-mu-ie-matrix-dx="-11" data-mu-ie-matrix-dy="-11"><!-- simple frame --></div>
+    <div class="clip_frame mse_pre_init" id="u10883"><!-- svg -->
+     <img class="svg" id="u10884" src="images/geplakte-svg-232425-x-212.svg?crc=208842065" width="84" height="75" alt="" data-mu-svgfallback="images/geplakte%20svg%20232425%20x%20212_poster_.png?crc=473013910"/>
+    </div>
    </div>
    <div class="verticalspacer" data-offset-top="3869" data-content-above-spacer="3868" data-content-below-spacer="61"></div>
    <div class="clearfix grpelem" id="u9789-4"><!-- content -->
@@ -208,6 +212,8 @@ $('#u10853').registerBackgroundPositionScrollEffect([{"speed":[0,1.1],"in":[-Inf
 $('#u4034').registerPositionScrollEffect([{"speed":[0,1.06],"in":[-Infinity,3446.15]},{"speed":[0,1.06],"in":[3446.15,Infinity]}]);/* scroll effect */
 $('#u4034').registerBackgroundPositionScrollEffect([{"speed":[0,1.1],"in":[-Infinity,3446.15]},{"speed":[0,1.1],"in":[3446.15,Infinity]}]);/* scroll effect */
 $('#menuu9551').registerPositionScrollEffect([{"speed":[0,-1],"in":[-Infinity,169]},{"speed":[0,0],"in":[169,Infinity]}]);/* scroll effect */
+$('#u10882').registerPositionScrollEffect([{"speed":[0,-1],"in":[-Infinity,168.7]},{"speed":[0,0],"in":[168.7,Infinity]}]);/* scroll effect */
+$('#u10883').registerPositionScrollEffect([{"speed":[0,-1],"in":[-Infinity,169]},{"speed":[0,0],"in":[169,Infinity]}]);/* scroll effect */
 Muse.Utils.showWidgetsWhenReady();/* body */
 Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
 }catch(b){if(b&&"function"==typeof b.notify?b.notify():Muse.Assert.fail("Error calling selector function: "+b),false)throw b;}})})};
