--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <title>Portfolio Tiemen Meertens</title>
 <link href="https://fonts.googleapis.com/css?family=Montserrat:400,900&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="css/main.css">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
