--- a/test.html
+++ b/test.html
@@ -81,7 +81,16 @@ body {
 <!-- End smartphone / tablet look -->
 </div>
 
-
+<script>
+function myFunction() {
+  var x = document.getElementById("myLinks");
+  if (x.style.display === "block") {
+    x.style.display = "none";
+  } else {
+    x.style.display = "block";
+  }
+}
+</script>
 
 </body>
 </html>
