--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	
 	<div class="container">
 		<header>
-			<img src="logo" alt="tmlogo" class="logo">
+			<img src="images/logo-grijs.svg" alt="tmlogo" class="logo">
 
 			<nav>
 				<a href="#" class="hide-desktop">
