--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	
 	<div class="container">
 		<header>
-			<img src="images/logo-grijs.svg" style="width: 10px;" alt="tmlogo" class="logo">
+			<img src="../../The 2019 Frontend Developer Crash Course/images/Logopedie-Boxmeer/MacBook-design-mockup_logopedie_boxmeer7.jpg" style="width: 10px;" alt="tmlogo" class="logo">
 
 			<nav>
 				<a href="#" class="hide-desktop">
