--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	
 	<div class="container">
 		<header>
-			<img src="images/Bouwput-en-select-portfolio/_MG_0538.jpg" style="width: 10px;" alt="tmlogo" class="logo">
+			<img src="images/close.png" style="width: 10px;" alt="tmlogo" class="logo">
 
 			<nav>
 				<a href="#" class="hide-desktop">
