--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 		<section>
 		<img src="images/logo-graphic.svg" alt="logo graphic" class="graphic">
 			<div class="tiemen"><h1>Tiemen Meertens</h1></div>
-			<p class="subhead">Grafisch vormgever/UX designer</p>
+			<p class="subhead">Grafisch vormgever/UX ontwerper</p>
 			<img src="images/scroll.png" alt="scroll down" class="scroll show-desktop hide-mobile">
 			
 			
