--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	
 	<div class="container">
 		<header>
-			<img src="images/close.png" style="width: 10px;" alt="tmlogo" class="logo">
+			<img src="images/close.png" alt="tmlogo" class="logo">
 
 			<nav>
 				<a href="#" class="hide-desktop">
@@ -34,7 +34,7 @@
 		<section>
 		<img src="images/logo-graphic.svg" alt="logo graphic" class="graphic">
 			<div class="tiemen"><h1>Tiemen Meertens</h1></div>
-			<p class="subhead">Grafisch vormgever/UX ontwerper</p>
+			<p class="subhead">Grafisch vormgever/UX designer</p>
 			<img src="images/scroll.png" alt="scroll down" class="scroll show-desktop hide-mobile">
 			
 			
