--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@ Woonplaats: Arnhem
 			<a href="#">
 			   <img src="images/tmlogo.png" class="logo" alt="logo">
 			</a>
-			<p class="policy">© 2020 Tiemen Meertens</p>
+			<p class="policy">© 2020 Tiemen</p>
 			<ul class="footer-links">
 					<li><a href="mijn-werk.html">Mijn werk</a></li>
 					<li><a href="fotografie.html">Fotografie</a></li>
