--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 	
 	<div class="container">
 		<header>
-			<img src="images/logo-grijs.svg" alt="tmlogo" class="logo">
+			
+			<img src="images/logo-grijs.svg" alt="tmlogo" class="logo" style="width: 40px;">
 
 			<nav>
 				<a href="#" class="hide-desktop">
