--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<div class="container">
 		<header>
 			
-			<img src="images/logo-grijs.svg" alt="tmlogo" class="logo" style="width: 40px;">
+			<img src="images/logo-grijs.png" alt="tmlogo" class="logo">
 
 			<nav>
 				<a href="#" class="hide-desktop">
