--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 	<div class="container">
 		<header>
 			
-			<img src="images/logo-grijs.png" alt="tmlogo" class="logo">
+			
+			<img src="images/logo-grijs.png" alt="tmlogo" style="width: 80px; height: auto" />
 
 			<nav>
 				<a href="#" class="hide-desktop">
