--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 					<li id="exit" class="exit-btn hide-desktop"><img src="images/exit.svg" alt="exit menu" class="exit-menu"></li>
 						
 
-					<li><a href="#">Homee</a></li>
+					<li><a href="#">Home</a></li>
 					<li><a href="mijn-werk.html">Mijn werk</a></li>
 					<li><a href="fotografie.html">Fotografie</a></li>
 					<li><a href="contact.html">Contact</a></li>
@@ -197,7 +197,7 @@ Woonplaats: Arnhem
 			<a href="#">
 			   <img src="images/tmlogo.png" class="logo" alt="logo">
 			</a>
-			<p class="policy">© 2020 Tiemen</p>
+			<p class="policy">© 2020 Tiemen Meertens</p>
 			<ul class="footer-links">
 					<li><a href="mijn-werk.html">Mijn werk</a></li>
 					<li><a href="fotografie.html">Fotografie</a></li>
