--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<header>
 			
 			
-			<img src="images/logo-grijs.png" alt="tmlogo" style="width: 80px; height: auto" />
+			<img src="images/logo-grijs.png" alt="tmlogo" style="height: 70px" />
 
 			<nav>
 				<a href="#" class="hide-desktop">
