--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@ Woonplaats: Arnhem
 	<div class="footer-container">
 		<div class="container">
 			<a href="#">
-			   <img src="images/tmlogo.png" class="logo" alt="logo">
+			   <img src="images/tmlogo.png" class="logo" alt="logo" />
 			</a>
 			<p class="policy">© 2020 Tiemen Meertens</p>
 			<ul class="footer-links">
