--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<header>
 			
 			
-			<img src="images/logo-grijs.svg" alt="tmlogo" style="height: 70px" />
+			<img src="images/logo-grijs.svg" alt="tmlogo" style="height: 35px; margin-top:-5px" />
 
 			<nav>
 				<a href="#" class="hide-desktop">
