--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ Woonplaats: Arnhem
 				<ul class="grafische-opdrachten">
 					<li>
 						<a href="fotografie.html#muziekfotografie">
-						<img src="images/_MG_1374.jpg" alt="dtc">
+						<img src="images/_MG_1374.jpg" alt="muziekfotografie">
 						<p class="portfolio-titles">Muziekfotografie</p>
 						</a>
 					</li>
