--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
 <link href="https://fonts.googleapis.com/css?family=Montserrat:400,900&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="css/main.css">
 	<link rel="stylesheet" type="text/css" href="css/lightbox.min.css">
-	<script type="text/javascript" src="js/lightbox-plus-jquery.min.js"></script>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
