--- a/experimentele-fotografie.html
+++ b/experimentele-fotografie.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" href="css/main.css">
 	<link rel="stylesheet" type="text/css" href="css/lightbox.min.css">
 	<script type="text/javascript" src="js/lightbox-plus-jquery.min.js"></script>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
