--- a/footer.html
+++ b/footer.html
@@ -2,6 +2,7 @@
 <html>
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,900&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="css/main.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
 	
 
