--- a/header.html
+++ b/header.html
@@ -3,7 +3,8 @@
 	<head>
 		<meta charset="UTF-8">
 		<link href="https://fonts.googleapis.com/css?family=Montserrat:400,900&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="css/main.css">
+		<link rel="stylesheet" href="css/main.css">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		</head>
 <body>
 			<header>
