--- a/parallax.html
+++ b/parallax.html
@@ -7,6 +7,7 @@
 <link href="https://fonts.googleapis.com/css?family=Montserrat:400,900&display=swap" rel="stylesheet">
 <title>Parallax</title>
 <link rel="stylesheet" href="css/parallax.css">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
     
