--- a/fotografie.html
+++ b/fotografie.html
@@ -36,7 +36,7 @@
 				<ul class="grafische-opdrachten">
 					<li>
 						<a href="muziekfotografie.html">
-						<img src="images/_MG_1374.jpg" alt="dtc">
+						<img src="images/IMG_1374.jpg" alt="dtc">
 						<p class="portfolio-titles">Muziekfotografie</p>
 						</a>
 					</li>
