--- a/footer.html
+++ b/footer.html
@@ -11,7 +11,7 @@
 		<div class="footer-container">
 		<div class="container">
 			<a href="#">
-			   <img src="images/logo-grijs.svg" class="logo" alt="logo">
+			  <img src="images/logo-grijs.svg" alt="tmlogo" style="height: 70px; margin-top:-10px">
 			</a>
 			<p class="policy">© 2020 Tiemen Meertens</p>
 			<ul class="footer-links">
