--- a/header.html
+++ b/header.html
@@ -8,7 +8,7 @@
 		</head>
 <body>
 			<header>
-			<img src="images/logo-grijs.svg" alt="tmlogo" class="logo">
+			<img src="images/logo-grijs.svg" alt="tmlogo" style="height: 45px; margin-top:-10px">
 
 			<nav>
 				<a href="#" class="hide-desktop">
