--- a/playground_awwa.html
+++ b/playground_awwa.html
@@ -18,7 +18,7 @@
 		</header>
 		
 		<ul class="breadcrumb">
-			<li><a href="Index.html">Home</a></li>
+			<li><a href="www.tiemenmeertens.nl">Home</a></li>
 			<li><a href="mijn-werk.html">Mijn werk</a></li>
 			<li>A World Without AIDS</li>
 		</ul>
