--- a/mijn-werk.html
+++ b/mijn-werk.html
@@ -90,7 +90,7 @@
 					<li>
 						
 						<a href="playground_project-repeat.html">
-						<img src="images/Project Repeat/_MG_4070-bewerkt.jpg" alt="dtc">
+						<img src="images/Project Repeat/IMG_4070-bewerkt.jpg" alt="dtc">
 						<p class="portfolio-titles">Repeat</p>
 						</a>
 							
