--- a/mijn-werk.html
+++ b/mijn-werk.html
@@ -130,7 +130,7 @@
 					<li>
 						<a href="playground_awwa.html">
 							<img src="images/mw_awwa.jpg" alt="webbio">
-							<p class="portfolio-titles">AWWA project</p>
+							<p class="portfolio-titles">AWWA</p>
 						</a>
 					</li>
 					
