--- a/mijn-werk.html
+++ b/mijn-werk.html
@@ -169,7 +169,7 @@
 				<ul class="grafische-opdrachten">
 					<li>
 						<a href="muziekfotografie.html">
-						<img src="images/IMG_1374.jpg" alt="muziekfotografie">
+						<img src="images/Bouwput-en-select-portfolio/IMG_0421.jpg" alt="muziekfotografie">
 						<p class="muziekfotografie">Muziekfotografie</p>
 						</a>
 					</li>
