--- a/kwik.html
+++ b/kwik.html
@@ -52,7 +52,7 @@ In opdracht van: Webbio
 					<li>
 						
 						<a href="playground_project-repeat.html">
-						<img src="images/Project Repeat/_MG_4070-bewerkt.jpg" alt="dtc">
+						<img src="images/Project Repeat/IMG_4070-bewerkt.jpg" alt="dtc">
 						<p class="portfolio-titles">Playground: Repeat</p>
 						</a>
 							
