--- a/OTM.html
+++ b/OTM.html
@@ -37,7 +37,7 @@ In opdracht van: DTC Media
 							</p>
 				</div>
 
-	<img src="images/dtc_media.png" alt="dtc" class="dtc">
+	<img src="images/dtc_media.png" alt="OTM preview" class="dtc">
 	
 		
 		
@@ -45,14 +45,14 @@ In opdracht van: DTC Media
 				<ul class="grafische-opdrachten">
 					<li>
 						<a href="mijn-werk.html#playground">
-						<img src="images/mijn-werk-preview.jpg" alt="dtc">
+						<img src="images/mijn-werk-preview.jpg" alt="Mijn werk">
 						<p class="portfolio-titles">Mijn werk</p>
 						</a>
 					</li>
 
 					<li>
 						<a href="logopedie-boxmeer.html">
-						<img src="images/mw_logopedie-boxmeer.jpg" alt="logopedie-boxmeer">
+						<img src="images/mw_logopedie-boxmeer.jpg" alt="(Pre)Logopedie Boxmeer">
 						<p class="portfolio-titles">(Pre)Logopedie Boxmeer</p>
 						</a>
 					</li>
