--- a/fotografie.html
+++ b/fotografie.html
@@ -36,14 +36,14 @@
 				<ul class="grafische-opdrachten">
 					<li>
 						<a href="muziekfotografie.html">
-						<img src="images/Bouwput-en-select-portfolio/IMG_1284.jpg" alt="dtc">
+						<img src="images/Bouwput-en-select-portfolio/IMG_1284.jpg" alt="Muziekfotografie">
 						<p class="portfolio-titles">Muziekfotografie</p>
 						</a>
 					</li>
 
 					<li>
 						<a href="experimentele-fotografie.html">
-						<img src="images/IMG_6250.jpg" alt="logopedie-boxmeer">
+						<img src="images/IMG_6250.jpg" alt="Experimentele fotografie">
 						<p class="portfolio-titles">Experimentele fotografie</p>
 						</a>
 					</li>
