--- a/index.html
+++ b/index.html
@@ -89,21 +89,21 @@ Woonplaats: Arnhem
 				<ul class="grafische-opdrachten">
 					<li>
 						<a href="OTM.html">
-						<img src="images/dtc.jpg" alt="dtc">
+						<img src="images/dtc.jpg" alt="DTC Online Taxatie Module">
 						<p class="portfolio-titles">Afstudeeropdracht: herbenken OTM</p>
 						</a>
 					</li>
 
 					<li>
 						<a href="logopedie-boxmeer.html">
-						<img src="images/logopedie-praktijk-groen.jpg" alt="logopedie-boxmeer">
+						<img src="images/logopedie-praktijk-groen.jpg" alt="Logopedie Boxmeer">
 						<p class="portfolio-titles">(Pre)Logopedie Boxmeer</p>
 						</a>
 					</li>
 					<li>
 						<a href="kwik.html">
-							<img src="images/webbio.jpg" alt="webbio">
-							<p class="portfolio-titles">Playground: Webbio Motion Graphic Kwik</p>
+							<img src="images/webbio.jpg" alt="Webbio Motion Graphic">
+							<p class="portfolio-titles">Webbio Motion Graphic Kwik</p>
 						</a>
 					</li>
 					<li>
@@ -155,14 +155,14 @@ Woonplaats: Arnhem
 				<ul class="grafische-opdrachten">
 					<li>
 						<a href="fotografie.html#muziekfotografie">
-						<img src="images/img_1374.jpg" alt="muziekfotografie">
+						<img src="images/img_1374.jpg" alt="Muziekfotografie">
 						<p class="portfolio-titles">Muziekfotografie</p>
 						</a>
 					</li>
 
 					<li>
 						<a href="fotografie.html#experimentele-fotografie">
-						<img src="images/IMG_6250.jpg" alt="logopedie-boxmeer">
+						<img src="images/IMG_6250.jpg" alt="Experimentele fotografie">
 						<p class="portfolio-titles">Experimentele fotografie</p>
 						</a>
 					</li>
