--- a/playground_nieuwbouwkenners.html
+++ b/playground_nieuwbouwkenners.html
@@ -37,7 +37,7 @@ In opdracht van: Nieuwbouwkenners.nl (Hans Janssen)<br><br>
 				</p>
 			</div>
 			<div class="opdracht-playground">
-				<img src="images/mw_nieuwbouwkenners.jpg" class="opdracht-afbeelding" alt="opdracht-afbeelding">
+				<img src="images/mw_nieuwbouwkenners.jpg" class="opdracht-afbeelding" alt="Nieuwbouwkenners logo preview">
 			</div>
 		</div>
 		
@@ -46,14 +46,14 @@ In opdracht van: Nieuwbouwkenners.nl (Hans Janssen)<br><br>
 				<ul class="grafische-opdrachten">
 					<li>
 						<a href="mijn-werk.html#playground">
-						<img src="images/mijn-werk-preview.jpg" alt="dtc">
+						<img src="images/mijn-werk-preview.jpg" alt="Mijn werk">
 						<p class="portfolio-titles">Mijn werk</p>
 						</a>
 					</li>
 
 					<li>
 						<a href="playground_title-sequence.html">
-						<img src="images/mw_titlesequence-preview.jpg" alt="titlesequence">
+						<img src="images/mw_titlesequence-preview.jpg" alt="Title sequence">
 						<p class="portfolio-titles">Title sequence</p>
 						</a>
 					</li>
