--- a/playground_recepten-vormgegeven.html
+++ b/playground_recepten-vormgegeven.html
@@ -37,7 +37,7 @@ In opdracht van: RijnIJssel<br><br>
 				</p>
 			</div>
 			<div class="opdracht-playground">
-				<img src="images/mw_recepten.jpg" class="opdracht-afbeelding" alt="opdracht-afbeelding">
+				<img src="images/mw_recepten.jpg" class="opdracht-afbeelding" alt="Recepten Vormgegeven preview">
 			</div>
 		</div>
 		
@@ -45,14 +45,14 @@ In opdracht van: RijnIJssel<br><br>
 				<ul class="grafische-opdrachten">
 					<li>
 						<a href="mijn-werk.html#playground">
-						<img src="images/mijn-werk-preview.jpg" alt="dtc">
+						<img src="images/mijn-werk-preview.jpg" alt="Mijn werk">
 						<p class="portfolio-titles">Mijn werk</p>
 						</a>
 					</li>
 						
 					<li>
 						<a href="fotografie.html">
-						<img src="images/IMG_6250.jpg" alt="Experimentele fotografie">
+						<img src="images/IMG_6250.jpg" alt="Playground: fotografie">
 						<p class="Experimentele fotografie">Playground: fotografie</p>
 						</a>
 					</li>
