--- a/kwik.html
+++ b/kwik.html
@@ -37,14 +37,14 @@ In opdracht van: Webbio
 				</div>
 		<div class="grafische-opdrachten-preview-link">
 <a href="https://vimeo.com/189381380" target="_blank">
-	<img src="images/mw_webbio.jpg" alt="webbio" class="dtc">
+	<img src="images/mw_webbio.jpg" alt="Webbio Motion Graphic" class="dtc">
 		</a>
 		</div>
 										<div class="grafische-opdrachten-container">
 				<ul class="grafische-opdrachten">
 					<li>
 						<a href="mijn-werk.html#playground">
-						<img src="images/mijn-werk-preview.jpg" alt="dtc">
+						<img src="images/mijn-werk-preview.jpg" alt="Mijn werk">
 						<p class="portfolio-titles">Mijn werk</p>
 						</a>
 					</li>
@@ -52,7 +52,7 @@ In opdracht van: Webbio
 					<li>
 						
 						<a href="playground_project-repeat.html">
-						<img src="images/Project Repeat/IMG_4070-bewerkt.jpg" alt="dtc">
+						<img src="images/Project Repeat/IMG_4070-bewerkt.jpg" alt="Playground: Repeat">
 						<p class="portfolio-titles">Playground: Repeat</p>
 						</a>
 							
