--- a/playground_awwa.html
+++ b/playground_awwa.html
@@ -37,7 +37,7 @@ In opdracht van: HAN<br><br>
 				</p>
 			</div>
 			<div class="opdracht-playground">
-				<img src="images/mw_awwa.jpg" class="opdracht-afbeelding" alt="opdracht-afbeelding">
+				<img src="images/mw_awwa.jpg" class="opdracht-afbeelding" alt="A World Without AIDS preview">
 			</div>
 		</div>
 		
@@ -45,7 +45,7 @@ In opdracht van: HAN<br><br>
 				<ul class="grafische-opdrachten">
 					<li>
 						<a href="mijn-werk.html#playground">
-						<img src="images/mijn-werk-preview.jpg" alt="dtc">
+						<img src="images/mijn-werk-preview.jpg" alt="Mijn werk">
 						<p class="portfolio-titles">Mijn werk</p>
 						</a>
 					</li>
@@ -53,7 +53,7 @@ In opdracht van: HAN<br><br>
 					<li>
 						
 						<a href="playground_ecoorn.html">
-						<img src="images/mw_ecoorn.jpg" alt="dtc">
+						<img src="images/mw_ecoorn.jpg" alt="Playground: Ecoorn">
 						<p class="portfolio-titles">Playground: Ecoorn</p>
 						</a>
 							
