--- a/playground_ecoorn.html
+++ b/playground_ecoorn.html
@@ -37,7 +37,7 @@ In opdracht van: HAN<br><br>
 				</p>
 			</div>
 			<div class="opdracht-playground">
-				<img src="images/ecoorn.jpg" class="opdracht-afbeelding" alt="opdracht-afbeelding">
+				<img src="images/ecoorn.jpg" class="opdracht-afbeelding" alt="Ecoorn preview">
 			</div>
 		</div>
 		
@@ -45,14 +45,14 @@ In opdracht van: HAN<br><br>
 				<ul class="grafische-opdrachten">
 					<li>
 						<a href="mijn-werk.html#playground">
-						<img src="images/mijn-werk-preview.jpg" alt="dtc">
+						<img src="images/mijn-werk-preview.jpg" alt="Mijn werk">
 						<p class="portfolio-titles">Mijn werk</p>
 						</a>
 					</li>
 						
 					<li>
 						<a href="playground_minimal.html">
-						<img src="images/mw_minimal.jpg" alt="logopedie-boxmeer">
+						<img src="images/mw_minimal.jpg" alt="Playground: MINIMAL">
 						<p class="portfolio-titles">Playground: MINIMAL</p>
 						</a>
 					</li>
