--- a/playground_minimal.html
+++ b/playground_minimal.html
@@ -37,7 +37,7 @@ Opdracht van: HAN<br><br>
 				</p>
 			</div>
 			<div class="opdracht-playground">
-				<img src="images/mw_minimal.jpg" class="opdracht-afbeelding" alt="opdracht-afbeelding">
+				<img src="images/mw_minimal.jpg" class="opdracht-afbeelding" alt="MINIMAL go to">
 			</div>
 		</div>
 		
@@ -47,14 +47,14 @@ Opdracht van: HAN<br><br>
 				<ul class="grafische-opdrachten">
 					<li>
 						<a href="mijn-werk.html#playground">
-						<img src="images/mijn-werk-preview.jpg" alt="dtc">
+						<img src="images/mijn-werk-preview.jpg" alt="Mijn werk">
 						<p class="portfolio-titles">Mijn werk</p>
 						</a>
 					</li>
 						
 					<li>
 						<a href="playground_vivare.html">
-							<img src="images/mw_vivare.jpg" alt="webbio">
+							<img src="images/mw_vivare.jpg" alt="Playground: Vivare">
 							<p class="portfolio-titles">Playground: Vivare</p>
 						</a>
 					</li>
