--- a/playground_vivare.html
+++ b/playground_vivare.html
@@ -37,7 +37,7 @@ In opdracht van: Vivare<br><br>
 				</p>
 			</div>
 			<div class="opdracht-playground">
-				<img src="images/mw_vivare.jpg" class="opdracht-afbeelding" alt="opdracht-afbeelding">
+				<img src="images/mw_vivare.jpg" class="opdracht-afbeelding" alt="Bouwhekzijl preview">
 			</div>
 		</div>
 		
@@ -45,14 +45,14 @@ In opdracht van: Vivare<br><br>
 				<ul class="grafische-opdrachten">
 					<li>
 						<a href="mijn-werk.html#playground">
-						<img src="images/mijn-werk-preview.jpg" alt="dtc">
+						<img src="images/mijn-werk-preview.jpg" alt="Mijn werk">
 						<p class="portfolio-titles">Mijn werk</p>
 						</a>
 					</li>
 						
 					<li>
 						<a href="playground_recepten-vormgegeven.html">
-							<img src="images/mw_recepten.jpg" alt="webbio">
+							<img src="images/mw_recepten.jpg" alt="Playground: Recepten vormgegeven">
 							<p class="portfolio-titles">Playground: Recepten vormgegeven</p>
 						</a>
 					</li>
