--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
 		
 		<div>
 				<figure>
-					<a href="#">
+					<a href="mailto:tiemenmeertens@gmail.com">
 						<blockquote>Kan ik iets voor je betekenen?
 						</blockquote>
 					</a>
