--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@ Woonplaats: Arnhem
 			
 			<div>
 				<figure>
-					<a href="tiemenmeertens@gmail.com">
+					<a href="mailto:tiemenmeertens@gmail.com">
 						<blockquote>Kan ik iets voor je betekenen?
 						</blockquote>
 					</a>
