--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
 		
 		<div>
 				<figure>
-					<a href="mailto:tiemenmeertens@gmail.com">
+					<a href="mailto:tiemenmeertens@gmail.com" target="_blank">
 						<blockquote>Kan ik iets voor je betekenen?
 						</blockquote>
 					</a>
