--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<header>
 			
 			
-			<img src="images/logo-grijs.svg" alt="tmlogo" style="height: 45px; margin-top:-10px">
+			<a href="/index.html"><img src="images/logo-grijs.svg" alt="tmlogo" style="height: 45px; margin-top:-10px"></a>
 
 			<nav>
 				<a href="#" class="hide-desktop">
