--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@ Woonplaats: Arnhem
 			<ul class="footer-links">
 					<li><a href="mijn-werk.html">Mijn werk</a></li>
 					<li><a href="fotografie.html">Fotografie</a></li>
-					<li><a href="#">Contact</a></li>
+					<li><a href="contact.html">Contact</a></li>
 			</ul>
 		</div>	
 	</div>
