--- a/3d_animation.html
+++ b/3d_animation.html
@@ -49,6 +49,7 @@
 				<a href="#" class="buy">Buy now</a>
 				<div class="circle"></div>
 				<img src="images/adidas.png" alt="adidas sneaker" class="product">
+					<img src="images/_MG_1657-bewerkt.png" alt="adidas sneaker" class="product">
 			</div>
 			<div class="box">
 				<h2 class="name">Product Name</h2>
