--- a/3d_animation.html
+++ b/3d_animation.html
@@ -48,7 +48,7 @@
 				<h2 class="name">Product Name</h2>
 				<a href="#" class="buy">Buy now</a>
 				<div class="circle"></div>
-				<img src="images/adidas.png" alt="adidas sneaker" class="voorgrond">
+				<img src="images/_MG_1657-bewerkt.png" alt="adidas sneaker" class="voorgrond">
 					<img src="images/_MG_1657-bewerkt.jpg" alt="adidas sneaker" class="achtergrond">
 			</div>
 			<div class="box">
