--- a/3d_animation.html
+++ b/3d_animation.html
@@ -48,8 +48,8 @@
 				<h2 class="name">Product Name</h2>
 				<a href="#" class="buy">Buy now</a>
 				<div class="circle"></div>
-				<img src="images/_MG_1657-bewerkt.png" alt="adidas sneaker" class="voorgrond">
-					<img src="images/_MG_1657-bewerkt.jpg" alt="adidas sneaker" class="achtergrond">
+				<img src="images/IMG_1657-bewerkt.png" alt="adidas sneaker" class="voorgrond">
+					<img src="images/IMG_1657-bewerkt.jpg" alt="adidas sneaker" class="achtergrond">
 			</div>
 			<div class="box">
 				<h2 class="name">Product Name</h2>
