--- a/3d_animation.html
+++ b/3d_animation.html
@@ -43,7 +43,7 @@
 		</section>
 		
 		
-		<div class="containertje">
+		<div class="bewegende-container">
 			<div class="box">
 				<h2 class="name">Product Name</h2>
 				<a href="#" class="buy">Buy now</a>
@@ -55,13 +55,15 @@
 				<h2 class="name">Product Name</h2>
 				<a href="#" class="buy">Buy now</a>
 				<div class="circle"></div>
-				<img src="images/adidas.png" alt="adidas sneaker" class="product">
+				<img src="images/IMG_1657-bewerkt.png" alt="adidas sneaker" class="voorgrond">
+					<img src="images/IMG_1657-bewerkt.jpg" alt="adidas sneaker" class="achtergrond">
 			</div>
 			<div class="box">
 				<h2 class="name">Product Name</h2>
 				<a href="#" class="buy">Buy now</a>
 				<div class="circle"></div>
-				<img src="images/adidas.png" alt="adidas sneaker" class="product">
+				<img src="images/IMG_1657-bewerkt.png" alt="adidas sneaker" class="voorgrond">
+					<img src="images/IMG_1657-bewerkt.jpg" alt="adidas sneaker" class="achtergrond">
 			</div>
 		</div>
 		
