--- a/3d_animation.html
+++ b/3d_animation.html
@@ -41,8 +41,40 @@
 			
 			
 		</section>
-		
-		
+		<div class="hide-desktop">
+					<div class="grafische-opdrachten-container">
+				<ul class="grafische-opdrachten">
+					<li>
+						<a href="OTM.html">
+						<img src="images/dtc.jpg" alt="DTC Online Taxatie Module">
+						<p class="portfolio-titles">Afstudeeropdracht: herbenken OTM</p>
+						</a>
+					</li>
+
+					<li>
+						<a href="logopedie-boxmeer.html">
+						<img src="images/logopedie-praktijk-groen.jpg" alt="Logopedie Boxmeer">
+						<p class="portfolio-titles">(Pre)Logopedie Boxmeer</p>
+						</a>
+					</li>
+					<li>
+						<a href="kwik.html">
+							<img src="images/webbio.jpg" alt="Webbio Motion Graphic">
+							<p class="portfolio-titles">Webbio Motion Graphic Kwik</p>
+						</a>
+					</li>
+					<li>
+						<a href="mijn-werk.html">
+							<p class="meer-opdrachten">Meer opdrachten</p>
+						</a>
+					</li>
+
+
+
+				</ul>
+			</div>
+		</div>
+		<div class="show-desktop hide-mobile">
 		<div class="bewegende-container">
 			<div class="box">
 				<h2 class="name">Product Name</h2>
@@ -66,7 +98,7 @@
 					<img src="images/IMG_1657-bewerkt.jpg" alt="adidas sneaker" class="achtergrond">
 			</div>
 		</div>
-		
+		</div>
 		
 		
 	</div>
