--- a/3d_animation.html
+++ b/3d_animation.html
@@ -74,7 +74,7 @@
 				</ul>
 			</div>
 		</div>
-		<div class="show-desktop hide-mobilee">
+		<div class="show-desktop hide-mobile">
 		<div class="bewegende-container">
 			<div class="box">
 				<h2 class="name">Product Name</h2>
