--- a/3d_animation.html
+++ b/3d_animation.html
@@ -76,13 +76,18 @@
 		</div>
 		<div class="show-desktop hide-mobile">
 		<div class="bewegende-container">
+			
 			<div class="box">
+				<a href="#">
 				<h2 class="name">Product Name</h2>
-				<a href="#" class="buy">Buy now</a>
+				
 				<div class="circle"></div>
-				<img src="images/IMG_1657-bewerkt.png" alt="adidas sneaker" class="voorgrond">
-					<img src="images/IMG_1657-bewerkt.jpg" alt="adidas sneaker" class="achtergrond">
+				<img src="images/dtc-media-transform-3d-1.png" alt="adidas sneaker" class="voorgrond">
+				<img src="images/dtc-media-transform-3d-2.png" alt="adidas sneaker" class="midden">
+				<img src="images/dtc-media-transform-3d-3.png" alt="adidas sneaker" class="achtergrond">
+				</a>
 			</div>
+			
 			<div class="box">
 				<h2 class="name">Product Name</h2>
 				<a href="#" class="buy">Buy now</a>
