--- a/3d_animation.html
+++ b/3d_animation.html
@@ -79,7 +79,7 @@
 			
 			<div class="box">
 				<a href="#">
-				<h2 class="name">Product Name</h2>
+				<h2 class="name">DTC Media</h2>
 				
 				<div class="circle"></div>
 				<img src="images/dtc-media-transform-3d-1.png" alt="adidas sneaker" class="voorgrond">
