--- a/index.html
+++ b/index.html
@@ -12,13 +12,11 @@
 	
 	<div class="container">
 		<header>
-			
-			
-			<a href="/index.html"><img src="images/logo-grijs.svg" alt="tmlogo" style="height: 45px; margin-top:-10px"></a>
-
+			<a href="/index.html"><img src="images/logo-grijs.svg" alt="tmlogo" style="height: 45px; margin-top:-10px">
+			</a>
 			<nav>
 				<a href="#" class="hide-desktop">
-					<img src="images/ham.svg" alt="toggle menu" class="menu" id="menu">
+				<img src="images/ham.svg" alt="toggle menu" class="menu" id="menu">
 				</a>
 				
 				<ul class="show-desktop hide-mobile" id="nav">
