--- a/index.html
+++ b/index.html
@@ -144,6 +144,13 @@ Woonplaats: Arnhem
 				<img src="images/webbio-transform-3d-1.png" alt="adidas sneaker" class="voorgrond-webbio">
 					<img src="images/webbio-transform-3d-2.png" alt="adidas sneaker" class="achtergrond-webbio">
 			</a>
+			<a href="kwik.html" class="box">
+				<h2 class="name">Playground</h2>
+				<div class="circle"></div>
+				<img src="images/meer-opdrachten.png" alt="adidas sneaker" class="ga-naar-opdrachten">
+					<img src="images/meer-opdrachten-macbook.png" alt="adidas sneaker" class="meer-opdrachten-macbook">
+
+			</a>
 		</div>
 		</div>
 			
