--- a/index.html
+++ b/index.html
@@ -145,10 +145,14 @@ Woonplaats: Arnhem
 					<img src="images/webbio-transform-3d-2.png" alt="adidas sneaker" class="achtergrond-webbio">
 			</a>
 			<a href="kwik.html" class="box">
-				<h2 class="name">Playground</h2>
+				<h2 class="name">Meer eigen werk</h2>
 				<div class="circle"></div>
 				<img src="images/meer-opdrachten.png" alt="adidas sneaker" class="ga-naar-opdrachten">
 					<img src="images/meer-opdrachten-macbook.png" alt="adidas sneaker" class="meer-opdrachten-macbook">
+								<img src="images/IMG_4622-1.png" alt="adidas sneaker" class="experimentele-fotografie1">
+				<img src="images/IMG_4622-2.png" alt="adidas sneaker" class="experimentele-fotografie2">
+				<img src="images/IMG_4622-3.png" alt="adidas sneaker" class="experimentele-fotografie3">
+				<img src="images/IMG_4622-4.png" alt="adidas sneaker" class="experimentele-fotografie4">
 
 			</a>
 		</div>
