--- a/playground_project-repeat.html
+++ b/playground_project-repeat.html
@@ -46,7 +46,7 @@ Bijdrage: fotografie en bewerking.
 				<div class="fotografie">
 		<div class="bewegende-container">
 			
-			<div class="box">
+			<div class="foto-box">
 				
 				
 				<img src="images/IMG_4622-5.jpg" class="kaart-achtergrond" alt="kaart achtergrond">
@@ -158,7 +158,7 @@ Bijdrage: fotografie en bewerking.
 	
 			<script src="vanilla-tilt.min.js"></script>
 	<script>
-		VanillaTilt.init(document.querySelectorAll(".box"), {
+		VanillaTilt.init(document.querySelectorAll(".foto-box"), {
 		max: 25,
 		speed: 400
 	});
