--- a/playground_project-repeat.html
+++ b/playground_project-repeat.html
@@ -44,7 +44,7 @@ Bijdrage: fotografie en bewerking.
 		
 		<div class="show-desktop hide-mobile">
 				<div class="fotografie">
-		<div class="bewegende-container">
+		<div class="bewegende-fotocontainer">
 			
 			<div class="foto-box">
 				
