--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ Woonplaats: Arnhem
 				<img src="images/webbio-transform-3d-1.png" alt="adidas sneaker" class="voorgrond-webbio">
 					<img src="images/webbio-transform-3d-2.png" alt="adidas sneaker" class="achtergrond-webbio">
 			</a>
-			<a href="kwik.html" class="box">
+			<a href="mijn-werk.html" class="box">
 				<h2 class="name">Meer eigen werk</h2>
 				<div class="circle"></div>
 				<img src="images/meer-opdrachten.png" alt="adidas sneaker" class="ga-naar-opdrachten">
@@ -215,7 +215,7 @@ Woonplaats: Arnhem
 				<div class="fotografie">
 		<div class="bewegende-container">
 			
-			<a href="logopedie-boxmeer.html" class="box">
+			<a href="muziekfotografie.html" class="box">
 				
 				<h2 class="name">Muziekfotografie</h2>
 				<img src="images/IMG_1284-3.jpg" class="kaart-achtergrond" alt="kaart achtergrond">
@@ -224,7 +224,7 @@ Woonplaats: Arnhem
 				<img src="images/IMG_1284-2.png" alt="adidas sneaker" class="midden-muziekfotografie">
 			</a>
 			
-			<a href="logopedie-boxmeer.html" class="box">
+			<a href="experimentele-fotografie.html" class="box">
 				
 				<h2 class="name">Experimentele fotografie</h2>
 				<img src="images/IMG_4622-5.jpg" class="kaart-achtergrond" alt="kaart achtergrond">
@@ -234,7 +234,7 @@ Woonplaats: Arnhem
 				<img src="images/IMG_4622-4.png" alt="adidas sneaker" class="experimentele-fotografie4">
 			</a>
 			
-				</div>
+		</div>
 				</div>
 			</div>
 			
