--- a/header.html
+++ b/header.html
@@ -8,7 +8,7 @@
 		</head>
 <body>
 			<header>
-			<img src="images/logo-grijs.svg" alt="tmlogo" style="height: 45px; margin-top:-10px">
+			<a href="/index.html"><img src="images/logo-grijs.svg" alt="tmlogo" style="height: 45px; margin-top:-10px"></a>
 
 			<nav>
 				<a href="#" class="hide-desktop">
@@ -19,7 +19,6 @@
 					<li id="exit" class="exit-btn hide-desktop"><img src="images/exit.svg" alt="exit menu" class="exit-menu"></li>
 						
 
-					<li><a href="index.html">Home</a></li>
 					<li><a href="mijn-werk.html">Mijn werk</a></li>
 					<li><a href="fotografie.html">Fotografie</a></li>
 					<li><a href="contact.html">Contact</a></li>
