--- a/OTM.html
+++ b/OTM.html
@@ -33,6 +33,10 @@ In opdracht van: DTC Media
 
 	<img src="images/dtc_media.png" alt="OTM preview" class="dtc">
 	
+		<br>
+		<img src="images/mockup7.gif" alt="OTM preview" class="dtc">
+		
+		
 				<br><br><br>
 		
 										<div class="grafische-opdrachten-container">
