--- a/OTM.html
+++ b/OTM.html
@@ -22,7 +22,10 @@
 						<div class="uitleg-dtc">
 				<h2>Afstudeeropdracht: herbedenken OTM</h2>
 							<p>Als afstudeeropdracht heb ik gewerkt aan het doorontwikkelen van 
-de Online Taxatie Module (OTM). Dit houdt in: klanten komen op een pagina om de inruilwaarde van hun huidige auto te berekenen en/of in te ruilen voor een nieuwe. Hierbij stond gebruikerservaring centraal met als uiteindelijke doel: conversie-optimalisatie.</p>
+de Online Taxatie Module (OTM). Dit houdt in: klanten komen op een pagina om de inruilwaarde van hun huidige auto te berekenen en/of in te ruilen voor een nieuwe. Hierbij stond gebruikerservaring centraal met als uiteindelijke doel: conversie-optimalisatie.</p><br>
+							<p> 
+							De aanleiding van de afstudeeropdracht is dat de (toegepaste) techniek van de huidige OTM is verouderd. De techniek staat niet stil, daarom heeft DTC Media gevraagd om met een frisse blik naar de module te kijken.</p>
+							
 							<p><br>
 					<b>Online Taxatie Module</b><br>
 Bijdrage: vormgeving en animatie (micro-interacties)<br>
@@ -33,11 +36,35 @@ In opdracht van: DTC Media
 
 	<img src="images/dtc_media.png" alt="OTM preview" class="dtc">
 	
-		<br>
+		<br><br>
+		
+						<h2>Chat based UI</h2>
+							<p>Aan de hand van de statistieken van de eerdere OTM versies zijn algemene - demografische, geografische en psychografische - data onderzocht. Aan de hand van onder andere deze gegevens is er gekozen voor een chat based UI.</p>
+		
+		
+								
+		
+		<br><br><br>
 		<img src="images/mockup7.gif" alt="OTM preview" class="dtc">
 		
 		
-				<br><br><br>
+				<br><br>
+		
+		<h2>Belangrijkste toepassingen</h2>
+							<p>De belangrijkste ontdekkingen die in het OTM concept zijn toegepast:
+								<br>
+• Interactieve storytelling (directe respons)
+								<br>
+• De meest prominente leeftijdscategorie zit tussen de 55-64 jaar. Er moet dus op de contrastverhouding van buttons en teksten gelet worden
+								<br>
+• In de fomulering wordt rekening gehouden met kleurenblindheid (klik op de groene knop om door te gaan is dus een no-go)
+								<br>
+• Material design is uit veel onderzoek ontstaan. Deze wordt voor het design ook als grootste inspiratiebron gebruikt.
+								<br>
+• Grote knoppen (mede vanwege de voornaamste doelgroep)
+								<br>
+• Micro interacties (zoals het meeslepen van de grafische content bij het swipen).</p>
+<br><br><br>
 		
 										<div class="grafische-opdrachten-container">
 				<ul class="grafische-opdrachten">
